removing use of methods that do not exist in 7.17