@@ -1072,12 +1072,10 @@ public class IngestDocumentTests extends ESTestCase {
             assertThat(ingestDocument1.getPipelineStack().size(), equalTo(1));
             IngestDocument copy = new IngestDocument(ingestDocument1);
             assertThat(ingestDocument1.getSourceAndMetadata(), not(sameInstance(copy.getSourceAndMetadata())));
-            assertThat(ingestDocument1.getCtxMap(), not(sameInstance(copy.getCtxMap())));
-            assertThat(ingestDocument1.getCtxMap().getMetadata(), not(sameInstance(copy.getCtxMap().getMetadata())));
             assertIngestDocument(ingestDocument1, copy);
             assertThat(copy.getPipelineStack(), equalTo(ingestDocument1.getPipelineStack()));
         });
-        Pipeline pipeline = new Pipeline("pipeline1", "test pipeline", 1, Map.of(), new CompoundProcessor(processor));
+        Pipeline pipeline = new Pipeline("pipeline1", "test pipeline", 1, Collections.emptyMap(), new CompoundProcessor(processor));
         ingestDocument.executePipeline(pipeline, (ingestDocument1, exception) -> {
             assertNotNull(ingestDocument1);
             assertNull(exception);
